<resources>
    <string name="app_name">Buddy</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="tv_surname">Surname</string>
    <string name="tv_email">mmolibeli@cut.ac.za</string>
    <string name="tv_phone">051-507-3091</string>
    <string name="rb_female">Female</string>
    <string name="rb_male">Male</string>
    <string name="btn_select">Select</string>
    <string name="btn_capture">Capture</string>
    <string name="btn_save">Save</string>
    <string name="btn_cancel">Cancel</string>
    <string name="hint_name">(enter first name)</string>
    <string name="hint_surname">(enter surname)</string>
    <string name="hint_location">(location goes here)</string>
    <string name="hint_phone">(enter phone number)</string>
    <string name="hint_email">(enter email address)</string>
    <string name="add_new">Add Buddy</string>
    <string name="view_buddy">View Buddy</string>
    <string name="search_buddy">Search Buddy</string>
    <string name="profile">Create Profile</string>

    <array name="group_items">
        <item>Personal</item>
        <item>Work</item>
        <item>Church</item>
    </array>

    <array name="status_items">
        <item>Protected</item>
        <item>Unprotected</item>
    </array>
</resources>
